--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,11 +1,14 @@
 <div id="<%= dom_id post %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Title:</strong>
+
+  <p class=" self-center		">
+    <%=image_tag post.photo, width: 300 if post.photo.attached? %>
+  </p>
+
+  <p class="my-5 font-serif text-center	">
     <%= post.title %>
   </p>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Description:</strong>
+  <p class="my-5 font-serif text-center	" >
     <%= post.description %>
   </p>
 
