--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,12 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body class="">
       <%= render 'shared/flash'%>
       <%= render 'shared/header'%>
+    <div class="lg:container lg:mx-auto">
       <%= yield %>
-    </main>
+    </div>
+
   </body>
 </html>
