--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,3 @@
-<div class="mx-auto md:w-2/3 w-full flex grid-cols-1">
-  <div class=" mx-auto basis-1/2">
-    <div class="justify-items-center row-span-3">
-
-      <%= link_to "New post", new_post_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
-
+<div class="">
       <%= render @posts %>
-
-    </div>
-  </div>
 </div>
