--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,10 +2,16 @@
   <div class="mx-autorow">
     <%= render @post %>
 
-    <%= link_to "Edit this post", edit_post_path(@post), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to "Destroy this post", post_path(@post), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
-    </div>
+    <%= link_to t('.edit'), edit_post_path(@post), if @post.owner? class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+      <%= link_to t('.delete'), post_path(@post), data: {
+                                        turbo_method: :delete,
+                                        turbo_confirm: ('.common.confirm')}
+                                        if @post.owner?
+                                        class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+      <%= link_to '♥', post_path(@post), data: {
+                            turbo_method: :post }
+                            class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+
     <%= link_to "Back to posts", posts_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   </div>
 </div>
