--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <div class="w-full h-screen ">
           <%= render 'shared/sidebar'%>
         </div>
-        <div class="w-full p-4">
+        <div class="w-full p-4 border-r border-indigo-600">
           <%= yield %>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.1.1/flowbite.min.js"></script>
         </div>
