--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New post</h1>
+  <h1 class="font-bold text-4xl text-white  "><%= t('.New')%></h1><br />
 
   <%= render "form", post: @post %>
 
