--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,24 +6,26 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.1.1/flowbite.min.css" rel="stylesheet" />
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-    
+
+    <script src="https://kit.fontawesome.com/95d9fd3f91.js" crossorigin="anonymous"></script>
   </head>
 
-  <body class="bg-gray-900 ">
+  <body class="bg-gray-900">
       <%= render 'shared/flash'%>
-      <div class="grid grid-cols-3 grid-rows-1 ">
-        <div class="w-full h-screen  p-4 border-r ">
+      <div class="flex justify-between">
+        <div class="w-full p-4 border-r border-indigo-600 lg:w-2/12	 h-screen  ">
           <%= render 'shared/sidebar'%>
         </div>
-        <div class="w-full p-4 border-r border-indigo-600">
+        <div class="w-full p-4  lg:w-1/2">
           <%= yield %>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.1.1/flowbite.min.js"></script>
         </div>
-        <div class="w-full text-white">
+        <div class="w-full text-white lg:w-1/4">
          <h1>Sugerencias</h1>
         </div>
       </div >
