--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<aside class="w-full flex flex-col justify-between items-start ">
+<aside class="h-full flex flex-col justify-between items-start ">
     <%= link_to  posts_path do %>
         <h1 class="text-2xl hover:text-red-500 font-bold text-teal-400"><%= t('app_name')%></h1>
     <% end %>
