--- a/app/views/shared/_items.html.erb
+++ b/app/views/shared/_items.html.erb
@@ -12,7 +12,7 @@
             turbo_method: :delete, turbo_confirm: t('common.confirm')} do %>
                 <i class="fa-solid fa-right-from-bracket cursor-pointer "></i>
             <% end %>
-            <%= link_to t('.likes'), likes_path %>
+            <%= link_to "likes", likes_path %>
             
         <%end%>
     </div>
