--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,8 +1,9 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing post</h1>
-
-  <%= render "form", post: @post %>
-
-  <%= link_to "Show this post", @post, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to posts", posts_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <h1 class="font-bold text-4xl"><%= t('.edit')%></h1>
+  <%= link_to  posts_path do %>
+    <i class="fa-solid fa-arrow-left text-white text-2xl"></i>
+  <%end %>
+  <div class="mx-autorow">
+    <%= render "form", post: @post %>
+  </div>
 </div>
