--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,10 @@
-<div class="mx-auto md:w-2/3 w-full">
+<div class="mx-auto md:w-2/3 w-full flex post">
   <h1 class="font-bold text-4xl text-white  "><%= t('.New')%></h1><br />
-
-  <%= render "form", post: @post %>
-
-  <%= link_to "Back to posts", posts_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to  posts_path do %>
+    <i class="fa-solid fa-arrow-left text-white text-2xl"></i>
+  <%end %>  
+  <div class="mx-autorow">
+    <%= render "form", post: @post %>
+      
+  </div>
 </div>
