--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,7 +1,8 @@
 <aside class="h-full flex flex-col justify-between items-start ">
     <%= link_to  posts_path do %>
-        <h1 class="text-2xl hover:text-red-500 font-bold text-teal-400"><%= t('app_name')%></h1>
+        <h1 class="text-2xl hover:text-red-500 font-bold text-teal-400 font-serif "><%= t('app_name')%> <i class="fa-brands fa-instagram"></i></h1>
     <% end %>
+    <%= render 'shared/items_2' %>
 
     <%= render 'shared/items'%>
  </aside >
