--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -15,21 +15,40 @@
       <% end %>
     <% end %>
   </div>
-    <div class="flex justify-center w-full border-2 border-slate-500 rounded-lg">
-      <%= link_to post do %>
-          <%= image_tag post.photo, width: 700 if post.photo.attached?  %>
-      <% end %>
+  <div class="flex justify-center w-full border-2 border-slate-500 rounded-lg">
+    <%= link_to post do %>
+      <%= image_tag post.photo, width: 700 if post.photo.attached?  %>
+    <% end %>
+  </div>
+  <% unless action_name == "index" %>
+    <%= render "likes" %>
+    <div class="flex justify-start text-white">
+      <i class="fa-regular fa-comment "></i>
+      <%= post.comments.count %>
     </div>
-
-      <%= render "likes" %>
-
-    <p class="my-5 font-serif 	text-white">
-      <%= post.title %>
-    </p>
-
-    <p class="my-5 font-serif 	text-white" >
-      <%= post.description %>
-    </p>
-    
-      <hr class="mt-6	">
+  <% end %>
+  <p class="my-5 font-serif text-white">
+    <%= post.title %>
+  </p>
+  <p class="my-5 font-serif text-white" >
+    <%= post.description %>
+  </p>
+  <% unless action_name == "index" %>
+    <h2>Comentarios</h2>
+    <% if post.comments.any? %>
+      <% post.comments.each do |comment| %>
+        <div class="comment">
+          <p><strong><%= comment.user.username %>:</strong> <%= comment.content %></p>
+        </div>
+      <% end %>
+    <% else %>
+      <p>No hay comentarios.</p>
+    <% end %>
+  
+    <%= form_with(model: [post, Comment.new], url: post_comments_path(post), method: :post) do |form| %>
+      <%= form.text_area :content, placeholder: "Agregar comentario...", class: "w-full" %>
+      <%= form.submit "Publicar Comentario" %>
+    <% end %>
+  <% end %>
+  <hr class="mt-6">
 </div>
