--- a/app/views/search/_form.html.erb
+++ b/app/views/search/_form.html.erb
@@ -12,8 +12,11 @@
             placeholder: "Search...",  autocomplete: "off"%>
             <div class="adsolute inset-y-0 right-0 flex items-center">
                     <%= form.submit "Search", class:"p-2 text-white bg-indigo-500 rounded-lg hover:bg:indigo-600 focus:outline-none focus:bg-indigo-600" %>
-
-
+            </div>
+                <div id="suggestions" class="adsolute w-full mt-2 bg-white rounded-lg shadow-lg"
+                data-search-target="suggestions" data-action="mousedown->search#childClicked">
+                <%= render partial: "search/suggestions", locals: {results: results } %>
+                </div>
             </div>
         </div>
 <% end %>
