--- a/app/views/search/_form.html.erb
+++ b/app/views/search/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(url:search_path, mehotd: :post, class: "w-60", data: {
     controller: "search",
-    action: "key->search#suggestions",
+    action: "keyup->search#suggestions",
     suggestions_url: search_suggestions_path,
 }) do |form| %>
         <div class="relative">
