--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <body class="bg-gray-900 ">
       <%= render 'shared/flash'%>
       <div class="flex justify-between">
-        <div class="w-full p-4 border-r border-indigo-600 lg:w-2/12	 max-h-full h-screen fixed   ">
+        <div class="w-full p-4 border-r border-blue-800 lg:w-2/12	 max-h-full h-screen fixed shadow shadow-indigo-500/50">
           <%= render 'shared/sidebar'%>
         </div>
         <div class="w-full p-4  lg:w-1/2 overflow-y-auto ml-80">
@@ -27,6 +27,7 @@
         </div>
         <div class="w-full text-white lg:w-1/4">
          <h1>Sugerencias</h1>
+         <%= render 'shared/suggestions' %>
         </div>
       </div >
   </body>
