--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,6 +18,11 @@
     <%= form.text_field :description, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", placeholder:"can be empty" %>
   </div>
 
+  <div class="field">
+    <%= form.label :hashtags, "Hashtags (separados por comas)" %>
+    <%= form.text_field :hashtags, placeholder: "Ejemplo: #ruby, #rails, #programming" %>
+  </div>
+
   <div class="inline">
     <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
   </div>
