--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,26 @@
-<%= @user.username%>
+<%= @user.username %>
 <% unless current_user.followed_users.include?(@user) %>
   <%= link_to "Seguir", follow_user_path(@user), method: :post %>
 <% else %>
   <%= link_to "Dejar de seguir", unfollow_user_path(@user), method: :delete %>
 <% end %>
-<h2>Seguidores:</h2>
-<% @user.followers_users.each do |follower| %>
-  <p><%= link_to follower.username, user_path(follower) %></p>
-<% end %>
+<div class="followers">
+  <h2>Seguidores:</h2>
+  <% @user.followers.each do |follower| %>
+    <p><%= link_to follower.username, user_path(follower) %></p>
+  <% end %>
+</div>
 
-<h2>Siguiendo:</h2>
-<% @user.followed_users.each do |followed| %>
-  <p><%= link_to followed.username, user_path(followed) %></p>
-<% end %>
-
+<div class="followed-users">
+  <h2>Siguiendo:</h2>
+  <% @user.followed_users.each do |followed| %>
+    <p><%= link_to followed.username, user_path(followed) %></p>
+  <% end %>
+</div>
 <%= turbo_frame_tag "posts-#{@pagy.page}", class: 'posts' do %>
-        <%= render partial:'posts/post' collection: @posts %>
-        <%= turbo_frame_tag "posts-#{@pagy.next}", class:'posts', 
-                                                   src: pagy_url_for(@pagy, @pagy.next), 
-                                                   loading: :lazy if @pagy.next %>
+  <%= render partial: 'posts/post', collection: @posts %>
+<% end %>
+
+<% if @pagy.next %>
+  <%= turbo_frame_tag "posts-#{@pagy.next}", class: 'posts', src: pagy_url_for(@pagy, @pagy.next), loading: :lazy %>
 <% end %>
