--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,7 +20,7 @@
 
   <div class="field">
     <%= form.label :hashtags, "Hashtags (separados por comas)" %>
-    <%= form.text_field :hashtags, placeholder: "Ejemplo: #ruby, #rails, #programming" %>
+    <%= form.text_field :hashtags, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", placeholder: "Ejemplo: #ruby, #rails, #programming" %>
   </div>
 
   <div class="inline">
