--- a/app/views/layouts/_new_message_form.html.erb
+++ b/app/views/layouts/_new_message_form.html.erb
@@ -2,4 +2,5 @@
     <%= form_with(model: [@single_room, @message], remote: true) do |f| %>
         <%= f.text_field :body, id: 'chat-text', class:'form-control msg-content', autocomplete: 'off' %>
         <%= f.submit data: {disable_with: false} %> 
+    <% end %>
 </div>
