--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -7,12 +7,12 @@
   </div>
   
   <h4>Rooms</h4>
+  <%= render 'layouts/new_room_form' %>
   <%= turbo_stream_from "rooms" %>
   <div id="rooms">
     <%= render @rooms %>
   </div>
-  <%= render 'layouts/new_room_form' %>
-  <div>
+  <div id="room_container">
     <% if @single_room %>
     <div id=single_room">
       <h4 class="text-center"><%= @user&.username || @single_room.name %></h4>
