--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,9 +1,8 @@
-<div>
-
-    <% unless message.room.is_private %>
-        <h6><%= message.user.username %></h6>
-    <% end %>
-    <%= message.content %>
-        
-    end
+<div class="cont-<%= message.user.id%>">
+    <div class="message-box msg-<%=message.user.id %>"></div>
+        <% unless message.room.is_private %>
+            <h6><%= message.user.username %></h6>
+        <% end %>
+        <%= message.body %>
+    </div>
 </div>
