--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,17 @@
     <%= javascript_importmap_tags %>
 
     <script src="https://kit.fontawesome.com/95d9fd3f91.js" crossorigin="anonymous"></script>
+    <style>
+      <%= ".msg-#{current_user&.id}"%> {
+      background-color: #007bff !important;
+      padding: 10px;
+      }
+      <%= ".cont-#{current_user&.id}" %> {
+      display: flex;
+      justify-content: flex-end
+      }
+
+    </style>
   </head>
 
   <body class="bg-gray-900 ">
