--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,28 +1,30 @@
-<div>
-  <h5><%=current_user.username%> </h5>
-  <h4>Users</h4>
-  <%= turbo_stream_from "users" %>
-  <div id="users">
-    <%= render @users %>
-  </div>
-  
-  <h4>Rooms</h4>
-  <%= render 'layouts/new_room_form' %>
-  <%= turbo_stream_from "rooms" %>
-  <div id="rooms">
-    <%= render @rooms %>
-  </div>
-  <div id="room_container">
-    <% if @single_room %>
-    <div id=single_room">
-      <h4 class="text-center"><%= @user&.username || @single_room.name %></h4>
-      <%= turbo_stream_from @single_room %>
-      <div id=" messages">
-        <%= render @messages %>
-      </div>
-      <%= render 'layouts/new_message_form' %>
-      </div>
+<div id=" chatroom_container">
+  <div id="side_panel">
+    <h5><%=current_user.username%> </h5>
+    <h4>Users</h4>
+    <%= turbo_stream_from "users" %>
+    <div id="users">
+      <%= render @users %>
     </div>
-      <%end %>
+    
+    <h4>Rooms</h4>
+    <%= render 'layouts/new_room_form' %>
+    <%= turbo_stream_from "rooms" %>
+    <div id="rooms">
+      <%= render @rooms %>
+    </div>
   </div>
+    <div id="room_container">
+      <% if @single_room %>
+      <div id=single_room">
+        <h4 class="text-center"><%= @user&.username || @single_room.name %></h4>
+        <%= turbo_stream_from @single_room %>
+        <div id=" messages">
+          <%= render @messages %>
+        </div>
+        <%= render 'layouts/new_message_form' %>
+        </div>
+      </div>
+        <%end %>
+    </div>
 </div>
